# youtube-mcp-server

./: .dockerignore  .env.example  .gitignore  .terraformignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  pyproject.toml
.codex/: logs_1.sqlite  logs_1.sqlite-shm  logs_1.sqlite-wal  session_index.jsonl
.codex/prompts/: speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.github/workflows/: hosted-deploy.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
infrastructure/gcp/: README.md  main.tf  network.tf  outputs.tf  session.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/local/: README.md  compose.yaml
requirements/: PRD.md  spec-kit-seed.md  tool-specs.md
scripts/: deploy_cloud_run.sh  dev_local.sh  local_compose.sh  verify_cloud_run_foundation.py
specs/001-mcp-transport-handshake/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tool-registry-dispatcher/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-baseline-server-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-config-secrets-startup-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-health-logging-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-cloud-run-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+1448 files in other folders)
